--- a/ML/Untitled.ipynb
+++ b/ML/Untitled.ipynb
@@ -1,38 +1,45 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "79038360",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "4cceb24b",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "a = 'ali'\n",
-    "b = 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "f6748400",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ali 2\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(a,b)"
+    "# Hello Machine Learing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "87d08a02",
+   "id": "39be7986",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31mJupyter cannot be started. Error attempting to locate Jupyter: Running cells requires jupyter and notebook package.\n",
+      "\u001b[1;31mRun the following command to install 'jupyter and notebook' into the Python environment. \n",
+      "\u001b[1;31mCommand: 'python -m pip install jupyter notebook -U\n",
+      "\u001b[1;31mor\n",
+      "\u001b[1;31mconda install jupyter notebook -U'\n",
+      "\u001b[1;31mClick <a href='https://aka.ms/installJupyterForVSCode'>here</a> for more info."
+     ]
+    }
+   ],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import pandas as pd\n",
+    "import pylap as pl\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "0ab11a3a",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -40,7 +47,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -54,7 +61,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.11.1 (v3.11.1:a7a450f84a, Dec  6 2022, 15:24:06) [Clang 13.0.0 (clang-1300.0.29.30)]"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
   }
  },
  "nbformat": 4,
